--- a/grafica_IMAC_Xpress.ipynb
+++ b/grafica_IMAC_Xpress.ipynb
@@ -28,7 +28,7 @@
    ],
    "source": [
     "\n",
-    "df = pd.read_csv('250909_D53E_d318_IMAC.csv', delimiter='\\t',encoding = \"UTF-16\", header=2)\n",
+    "df = pd.read_csv('IMAC.csv', delimiter='\\t',encoding = \"UTF-16\", header=2)\n",
     "# Convert each column to numeric (originally objects)\n",
     "df['ml']=pd.to_numeric(df['ml'], errors='coerce')\n",
     "df['mAU'] =pd.to_numeric(df['mAU'], errors='coerce')\n",
