--- a/grafica_sec_unicorn_v7_8.ipynb
+++ b/grafica_sec_unicorn_v7_8.ipynb
@@ -15,7 +15,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### ResourceQ Pico 1\n"
+    "### IEX\n"
    ]
   },
   {
@@ -34,7 +34,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv('250910_LvrC_D53E_d318_resourceQ.csv',delimiter='\\t',encoding = \"UTF-16\", header=2)\n",
+    "df = pd.read_csv('IEX.csv',delimiter='\\t',encoding = \"UTF-16\", header=2)\n",
     "print(df.columns)"
    ]
   },
@@ -46,7 +46,7 @@
     {
      "data": {
       "text/plain": [
-       "Text(0.5, 1.0, 'LvrC D53E ∆318 - Resource Q')"
+       "Text(0.5, 1.0, 'IEX')"
       ]
      },
      "execution_count": 14,
@@ -100,16 +100,16 @@
     "ax.tick_params(axis='x', **tkw)\n",
     "ax.legend(loc=\"upper left\")\n",
     "twinx.legend()\n",
-    "plt.title('LvrC D53E ∆318 - Resource Q', fontsize = 16)\n",
+    "plt.title('IEX', fontsize = 16)\n",
     "\n",
-    "#plt.savefig('D53E_d318_Pico1_resourceQ.svg')\n"
+    "#plt.savefig('IEX.svg')\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### S200 Pico 2\n"
+    "### SEC\n"
    ]
   },
   {
@@ -128,7 +128,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv('250910_LvrC_D53E_d318_P1_S200.csv',delimiter='\\t',encoding = \"UTF-16\", header=2)\n",
+    "df = pd.read_csv('SEC.csv',delimiter='\\t',encoding = \"UTF-16\", header=2)\n",
     "print(df.columns)"
    ]
   },
@@ -193,7 +193,7 @@
     "plt.title('Pico 2', fontsize = 18)\n",
     "plt.tight_layout()\n",
     "\n",
-    "#plt.savefig('S200_16_60_p2.svg')\n"
+    "#plt.savefig('SEC.svg')\n"
    ]
   },
   {
